[workspace]
members = ["vg-*", "my-game"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Noxim <aaro.peramaa@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://noxim.xyz"
publish = false

[workspace.dependencies]
vg-asset = { path = "vg-asset" }
vg-engine = { path = "vg-engine" }
vg-interface = { path = "vg-interface" }
vg-network = { path = "vg-network" }
vg-runtime = { path = "vg-runtime" }
vg-scene = { path = "vg-scene" }

matchbox_signaling = { git = "https://github.com/johanhelsing/matchbox", rev = "6001c1e" }
matchbox_protocol = { git = "https://github.com/johanhelsing/matchbox", rev = "6001c1e" }
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox", rev = "6001c1e" }

glam = "0.27"
wgpu = "0.19"

profiling = { version = "1", features = ["profile-with-tracing"] }

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = true
