[package]
name = "cargo-vg"
version = "0.1.0"
authors = ["noxim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vg-native = { path = "../native", features = ["debug"] }
structopt = "0.3"
notify = "4"
wasm-bindgen-cli = "0.2"