[package]
name = "magic"
version = "0.1.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-vg = { path = "../cargo-vg" }
quote = "1"
syn = { version = "1.0.11", features = ["full"] }