cargo-features = ["per-package-target"]

[package]
name = "my-game"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }

forced-target = "wasm32-wasi"

[dependencies]
vg = { path = "../vg-rust" }
