[package]
name = "vg-native"
version = "0.1.0"
authors = ["noxim"]
edition = "2018"
resolver = "2"

[features]
default = ["wasm"]
wasm = ["rust-wasm", "wasmtime"]
debug = ["egui", "epi", "egui_wgpu_backend", "egui_winit_platform", "puffin_egui"]

[dependencies]
rust-wasm = { path = "../rust-wasm", optional = true }
# wasmer = { version = "2", optional = true }
wasmtime = { version = "0.29", optional = true }

vg-types = { path = "../rust/vg-types" }

dashmap = "4"
glam = "0.18"
bytes = "1"
serde = "1"
bincode = "1"

# Oh god, I am worse than xacrimon
abomonation = "0.7"
abomonation_derive = "0.5"

tracing = "0.1"
tracing-subscriber = "0.2"
puffin = "0.8"
loupe = "0.1"

# console_error_panic_hook = "0.1"
# tracing-wasm = "0.2"
# web-sys = "0.3"

tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "fs", "io-util", "time"] }
tokio-io = "0.1"
futures = { version = "0.3", features = ["compat"] }

winit = { version = "0.25", features = ["web-sys"] }
wgpu = "0.10"
wgpu-subscriber = "0.1"
rend3 = "0.1"
rend3-pbr = "0.1"

oddio = { git = "https://github.com/Ralith/oddio", branch = "main" }
cpal = "0.13"

image = "0.23"
lewton = { version = "0.10", features = ["async_ogg"] }
ogg = { version = "0.8", features = ["async"] }

egui = { version = "0.14", optional = true }
epi = { version = "0.14", optional = true }
egui_wgpu_backend = { version = "0.12", optional = true }
egui_winit_platform = { version = "0.10", optional = true }
puffin_egui = { version = "0.7", optional = true }