[package]
name = "vg-native"
version = "0.1.0"
authors = ["noxim"]
edition = "2018"
resolver = "2"

[features]
default = ["wasm"]
wasm = ["wasmtime"]

[dependencies]
# rust-wasm = { path = "../rust-wasm", optional = true }
# wasmer = { version = "2", optional = true }
wasmtime = { version = "0.33", optional = true }
vg-types = { path = "../rust/vg-types" }

# Data structures & serialization
dashmap = "4"
glam = "0.19"
bytes = "1"
serde = "1"
bincode = "1"
nanoserde = "0.1"

# Debugging
tracing = "0.1"
tracing-subscriber = "0.2"
puffin = "0.8"
loupe = "0.1"
egui = { version = "0.14" }
epi = { version = "0.14" }
egui_wgpu_backend = { version = "0.13" }
egui_winit_platform = { version = "0.10" }
# puffin_egui = { path = "../../puffin/puffin_egui" }
puffin_egui = "0.9"
derivative = "2"
anyhow = "1"

# console_error_panic_hook = "0.1"
# tracing-wasm = "0.2"
# web-sys = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-io = "0.1"
futures = { version = "0.3", features = ["compat"] }

# Networking
webrtc-data = "0.2.5"
webrtc-sctp = "0.3.5"
hyper = { version = "0.14", features = ["client", "server", "http1", "http2", "tcp"] }
# quinn = "0.7"
# rustls = { version = "0.19", features = ["quic", "dangerous_configuration"] }
# webpki = "0.21"
# rcgen = "0.8"

# Windowing & Graphics
winit = { version = "0.25", features = ["web-sys"] }
wgpu = "0.11"
wgpu-subscriber = "0.1"
rend3 = "0.2"
rend3-pbr = "0.2"

# Audio
oddio = { git = "https://github.com/Ralith/oddio", branch = "main" }
cpal = "0.13"

# Media decoding
image = "0.23"
lewton = { version = "0.10", features = ["async_ogg"] }
ogg = { version = "0.8", features = ["async"] }
