[package]
name = "vg"
version = "0.1.0"
authors = ["noxim"]
edition = "2018"

[features]
default = []
debug = ["vg-native/debug"]

[dependencies]
# vg-derive = { path = "derive" }
# futures = { version = "0.3", default-features = false, features = ["alloc", "executor"] }
# wasm-bindgen = "0.2"
vg-types = { path = "vg-types" }
glam = "0.16"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
vg-native = { path = "../native" }
vg-builder = { path = "vg-builder" }