[package]
name = "vg"
version = "0.1.0"
authors = ["noxim"]
edition = "2018"

[features]
default = []
debug = ["vg-native/debug"]

[dependencies]
# vg-derive = { path = "derive" }
# wasm-bindgen = "0.2"
vg-types = { path = "vg-types" }
glam = "0.16"

# Deps for event loop execution, hopefully some day inline these for reduced build times
# futures = { version = "0.3", default-features = false, features = ["alloc", "executor"] }
futures-executor = "0.3"
futures-channel = "0.3"
futures-task = "0.3"
futures-util = "0.3"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
vg-native = { path = "../native" }
vg-builder = { path = "vg-builder" }