[package]
name = "vg"
version = "0.1.0"
authors = ["noxim"]
edition = "2018"

[features]
default = []

[dependencies]
# vg-derive = { path = "derive" }
# wasm-bindgen = "0.2"
vg-types = { path = "vg-types" }
glam = "0.18"

# Deps for event loop execution, hopefully some day inline these for reduced build times
futures = { version = "0.3", default-features = false, features = ["alloc", "executor"] }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
vg-native = { path = "../native" }
vg-builder = { path = "vg-builder" }