[package]
name = "target-android"
version = "0.1.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]
edition = "2018"

[package.metadata.android]
android_version = 26
package_name = "xyz.noxim.kea"
label = "Kea"
fullscreen = true
res = "../game/res"
icon = "@mipmap/icon"

[dependencies]
game = { path = "../game", package = "game" }
kea = { path = "../engine" }
kea-glium = { path = "../util/kea-glium" }
android_glue = "0.2.3"
placeholder-input = { path = "../util/placeholder-input" }
