[package]
name = "target-desktop"
version = "0.1.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
game = { path = "../game", package = "game" }
kea = { path = "../engine" }
kea-glium = { path = "../util/kea-glium" }
kea-gilrs = { path = "../util/kea-gilrs" }
kea-cpal = { path = "../util/kea-cpal" }