[package]
name = "target-ios"
version = "0.1.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]
edition = "2018"

[lib]
name = "vg_ios"
crate-type = ["staticlib", "cdylib"]

[dependencies]
game = { path = "../game", package = "game" }
vg = { path = "../engine" }
vg-dev = { path = "../util/vg-dev" }

[patch.crates-io]
glutin = { git = "https://github.com/noxime/glutin", rev = "015b09e" }
