[package]
name = "target-ios"
version = "0.1.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]
edition = "2018"

[lib]
name = "vg_ios"
crate-type = ["staticlib", "cdylib"]

[dependencies]
game = { path = "../game", package = "game" }
vg = { path = "../engine" }
vg-glium = { path = "../util/vg-glium" }
placeholder-input = { path = "../util/placeholder-input" }
# vg-gilrs = { path = "../util/vg-gilrs" }
#vg-cpal = { path = "../util/vg-cpal" }
placeholder-audio = { path = "../util/placeholder-audio" }
futures-preview = "0.3.0-alpha.19"

[patch.crates-io]
glutin = { git = "https://github.com/noxime/glutin", rev = "015b09e" }
