[package]
name = "target-switch"
version = "0.0.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
lto = true
debug = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
rlibc = "*"
panic-abort = "0.3.1"
kea = { path = "../engine" }
game = { path = "../game" }

[build-dependencies]
bindgen = "0.37.0"
