[package]
name = "target-switch"
version = "0.0.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]

[profile.dev]
panic = "unwind"
lto = false
debug = true
opt-level = 0

[profile.test]
panic = "unwind"
lto = false
debug = true
opt-level = 0

[profile.release]
panic = "unwind"
lto = false
debug = true
opt-level = 0

[dependencies]
libnx-rs = { git = "https://github.com/ischeinkman/libnx-rs" }
# pistoncore-libnx-rs_window = { git = "https://github.com/noxime/libnx-rs_window" }
# piston_window = { version = "^0.82.0", default-features = false }
kea = { path = "../engine" }
game = { path = "../game" }