[package]
name = "target-switch"
version = "0.0.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]

[profile.dev]
panic = "unwind"
lto = false
debug = true
opt-level = 0

[profile.test]
panic = "unwind"
lto = false
debug = true
opt-level = 0

[profile.release]
panic = "unwind"
lto = false
debug = true
opt-level = 3

[dependencies]
libnx-rs = { git = "https://github.com/ischeinkman/libnx-rs", branch = "master" }

#pistoncore-libnx-rs_window = { git = "https://github.com/noxime/libnx-rs_window" }
#piston_window = { version = "^0.82.0", default-features = false }

kea = { path = "../engine" }
game = { path = "../game" }

[replace]
#"num_cpus:1.9.0" = { git = 'https://github.com/noxime/num_cpus/', branch = 'nintendo-3ds-horizon' }