[package]
name = "target-wasm"
version = "0.1.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]
edition = "2018"

# [lib]
# crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
# wasm-bindgen = "0.2"
game = { path = "../../" }
kea = { path = "../engine" }
kea-glium = { path = "../util/kea-glium" }
kea-gilrs = { path = "../util/kea-gilrs" }
#kea-cpal = { path = "../util/kea-cpal" }
placeholder-audio = { path = "../util/placeholder-audio" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.1", optional = true }

# # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# # compared to the default allocator's ~10K. It is slower than the default
# # allocator, however.
# #
# # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
# wee_alloc = { version = "0.4.2", optional = true }

# [dev-dependencies]
# wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"