[package]
name = "target-wasm"
version = "0.1.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]
edition = "2018"

# [lib]
# crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
# wasm-bindgen = "0.2"
game = { path = "../game" }
kea = { path = "../engine" }
# kea-sdl2 = { path = "../util/kea-sdl2" }
futures-preview = "0.3.0-alpha.19"
stdweb = "0.4.12"
webgl_stdweb = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1.6"
# wee-alloc is a bit slower than default one but 10x smaller
# wee_alloc = "0.4.5"

[profile.release]
# Binary size is important on the web
opt-level = "s"