[package]
name = "target-web"
version = "0.1.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]
edition = "2018"

# [lib]
# crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
# wasm-bindgen = "0.2"
game = { path = "../game" }
vg = { path = "../engine" }
# vg-sdl2 = { path = "../util/vg-sdl2" }
futures-preview = "0.3.0-alpha.19"
stdweb = "0.4.12"
webgl_stdweb = "0.3"
vg-gilrs = { path = "../util/vg-gilrs" }

# placeholder-input = { path = "../util/placeholder-input" }
placeholder-audio = { path = "../util/placeholder-audio" }

# wee-alloc is a bit slower than default one but 10x smaller
wee_alloc = "0.4.5"

[profile.release]
# Binary size is important on the web
opt-level = "s"