[package]
name = "typeshader"
version = "0.1.0"
authors = ["Aaro Perämaa <aaro.peramaa@gmail.com>"]
edition = "2018"

[features]
default = ["derive"]
derive = ["typeshader-derive"]
# signal derive that lists > 16 are supported
64 = ["typeshader-derive/64"]

[dependencies]
half = "1"
typeshader-derive = { path = "typeshader-derive", optional = true }