[package]
name = "vg-2d"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.11"
glam = { version = "0.19", features = ["rand"] }
log = "0.4"
dashmap = "4"
bytemuck = "1"

[dev-dependencies]
emoji-logger = "0.1"
winit = "0.25"
winit_input_helper = "0.10"
anyhow = "1"
pollster = "0.2"
rand = "0.8"