[package]
name = "vg-asset"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = "1"
notify = "6"
dashmap = "5"
tracing = "0.1"

tokio = { version = "1", features = ["full"] }
