[package]
name = "vg-derive"
version = "0.1.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
darling = "0.10"
syn = { version = "1", features = ["full"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
walkdir = "2"