[package]
name = "vg-editor"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }

default-run = "vg-editor"

[features]
tracy = ["dep:tracing-tracy"]

[dependencies]
vg-asset = { workspace = true }
# vg-interface = { workspace = true }
# vg-network = { workspace = true }
vg-engine = { workspace = true }

profiling = { workspace = true }
tracing-tracy = { version = "0.11", optional = true, features = ["enable", "only-localhost"] }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.1"
tokio = { version = "1", features = ["full"] }

egui = "0.27"
egui-winit = "0.27"
egui-wgpu = { version = "0.27", features = ["winit"] }
egui_extras = "0.27"
egui_plot = "0.27"
egui_tiles = "0.8"

chrono = "0.4"
dashmap = "5"