[package]
name = "vg-engine"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }

[lib]
# TODO: cargo-apk mistakenly looks for libvg-engine
# name = "vg_lib"
crate_type = ["cdylib", "lib"]

[dependencies]
vg-asset = { workspace = true }
vg-runtime = { workspace = true }
vg-interface = { workspace = true }
# vg-network = { workspace = true }

winit = { version = "0.28" }
tokio = { version = "1", features = ["full"] }

anyhow = "1"
tracing = "0.1"

three-d = "0.15"

[target.'cfg(not(target_os = "android"))'.dependencies]

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.28", features = ["android-native-activity"] }
log = "0.4"
android_logger = "0.13.0"
