[package]
name = "vg-network"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }

[dependencies]
vg-interface = { workspace = true }

anyhow = "1"
instant = "0.1"
matchbox_socket = { workspace = true }
futures = "0.3"
uuid = "1"

serde = { version = "1", features = ["derive"] }
bincode = "1"
# snap = "1"

tracing = "0.1"
