[package]
name = "vg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }

[dependencies]
# Public
vg-interface = { workspace = true }
glam = "0.24"

# Private
futures-executor = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
async-notify = "0.2"
