[package]
name = "vg-signaling"
version = "0.1.0"
edition = "2021"

[dependencies]
matchbox_signaling = { workspace =  true }
matchbox_protocol = { workspace =  true }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = "1"
tokio-tungstenite = "*"
axum = "*"
async-trait = "0.1"
dashmap = "5"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
