[package]
name = "vg-signaling"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }

[dependencies]
vg-network = { workspace = true }

matchbox_signaling = { workspace = true }
matchbox_protocol = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = "1"
tokio-tungstenite = "*"
axum = "0.7"
async-trait = "0.1"
dashmap = "5"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
uuid = "1"
