[package]
name = "kea-hal"
version = "0.1.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]
edition = "2018"

[features]
default-features = []
opgl = ["gfx-backend-gl"]
vlkn = ["gfx-backend-vulkan"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
metl = ["gfx-backend-metal"]

[dependencies]
kea = { path = "../../engine" }
winit = "0.18.0"
gfx-hal = "0.1.0"
gfx-backend-empty = { version = "0.1.0" }
gfx-backend-gl = { version = "0.1.0", optional = true }
gfx-backend-vulkan = { version = "0.1.0", optional = true }
gfx-backend-dx11 = { version = "0.1.0", optional = true }
gfx-backend-dx12 = { version = "0.1.0", optional = true }
gfx-backend-metal = { version = "0.1.0", optional = true }