[package]
name = "target-desktop"
version = "0.1.0"
authors = ["noxim <aaro.peramaa@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
game = { path = "../", package = "teet" }
vg = { path = "../engine" }
vg-glium = { path = "../util/vg-glium" }
vg-gilrs = { path = "../util/vg-gilrs" }
vg-cpal = { path = "../util/vg-cpal" }
futures-preview = "0.3.0-alpha.19"
